fix header text el alignment

--- a/css/screen.css
+++ b/css/screen.css
@@ -1512,7 +1512,7 @@ a.button {
     -o-transition: opacity 300ms ease;
     transition: opacity 300ms ease; }
   .header-bar .logo.home-link, .header-bar .header-bar-block {
-    min-height: 1.6875em;
+    height: 1.6875em;
     line-height: 1.6875em; }
   .header-bar .home-link {
     color: #91A1B3;
